--- a/index.html
+++ b/index.html
@@ -35,11 +35,8 @@
   <h2>This page is mostly about you</h2>
 
   <p>
-    You overthink small things.  
-    You care more than you admit.  
-    You pretend you’re fine even when you’re tired.
-    <br><br>
-    And somehow you still show up as yourself.
+    You bring warmth into rooms without trying.
+You think deeply, care honestly, and show up with quiet strength.
   </p>
 
   <div class="photos">
@@ -53,7 +50,7 @@
   </div>
 
   <p class="soft-text">
-    I hope you’re always gentle with yourself.
+   And somehow, you make everything around you feel steadier.
   </p>
 </section>
 
