--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
+<audio id="bgMusic" loop preload="auto">
+  <source src="music/happy-birthday-soft.mp3" type="audio/mpeg">
+</audio>
 <body>
 
 <!-- HERO -->
